--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -160,14 +160,15 @@ width: 100%;
 }
 .hero-banner-container h1{
   color: white;
-  font-size: 10em;
+  font-size: 7em;
   margin-left: -20px;
   text-transform: uppercase;
+  max-width: 50vw;
 }
 .hero-banner-image{
   position: absolute;
   top: 0%;
-  right:20%;
+  right: 20%;
   width: 450px;
   height: 450px;
 }
@@ -211,11 +212,10 @@ text-align: end;
   font-weight: 200;
 }
 .footer-banner-container{
-  padding: 100px 40px;
+  padding: 40px 40px;
   background-color: #f02d34;
   border-radius: 15px;
   position: relative;
-  height: 400px;
   line-height: 1; 
   color: white;
   width: 100%;
@@ -238,8 +238,9 @@ text-align: end;
 }
 .banner-desc .left h3{
   font-weight: 900;
-  font-size: 80px;
+  font-size: 4em;
   margin-left: 25px;
+  max-width: 33vw;
 }
 .banner-desc .left p{
   margin:18px;
@@ -248,11 +249,12 @@ text-align: end;
   position: absolute;
   /* top: -35%;
   left: 8%; */
-  top: -25%;
-  left: 25%;
+
+  left: 35%;
 }
 .banner-desc .right{
   line-height: 1.4;
+  align-self: center;
 }
 .banner-desc .right h3{
   font-weight: 800;
